test/libsolidity/syntaxTests/parsing/trailing_dot3.sol
contract test {
	uint a = 2.
// ----
// ParserError 2314: (29-29): Expected identifier but got end of source
